@@ -577,4 +577,22 @@ struct winsize {
 
 /** end of login recorder definitions */
 
+#ifndef CMSG_DATA
+/* given pointer to struct cmsghdr, return pointer to data */
+#define CMSG_DATA(cmsg) \
+	((u_char *)(cmsg) +  (((u_int)(sizeof(struct cmsghdr)) \
+	 (sizeof(int) - 1)) &~ (sizeof(int) - 1)))
+#endif /* CMSG_DATA */
+
+#ifndef CMSG_FIRSTHDR
+/*
+ * RFC 2292 requires to check msg_controllen, in case that the kernel returns
+ * an empty list for some reasons.
+ */
+# define CMSG_FIRSTHDR(mhdr) \
+	((mhdr)->msg_controllen >= sizeof(struct cmsghdr) ? \
+	 (struct cmsghdr *)(mhdr)->msg_control : \
+	 (struct cmsghdr *)NULL)
+#endif /* CMSG_FIRSTHDR */
+
 #endif /* _DEFINES_H */
